--- a/Android/res/raw/home.html
+++ b/Android/res/raw/home.html
@@ -1,6 +1,32 @@
+﻿<!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-        <h1>Home<h1><p>This is the homepage.</p>
-    </body>
- </html>
+<head>
+<script>
+function loadXMLDoc(param)
+{
+    var xmlhttp;
+    xmlhttp=new XMLHttpRequest();
+    xmlhttp.onreadystatechange=function()
+    {
+        if (xmlhttp.readyState==4 && xmlhttp.status==200)
+        {
+            document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
+        }
+    }
+    xmlhttp.open("POST","home.html?button=" + param,true);
+    xmlhttp.send("button=10");
+}
+</script>
+</head>
+<body>
+
+<div id="myDiv"><h2>Let AJAX change this text</h2></div>
+
+<button type="button" onclick="loadXMLDoc( 'F' )">Forward</button><br>
+<button type="button" onclick="loadXMLDoc( 'B' )">Backward</button><br>
+<button type="button" onclick="loadXMLDoc( 'L' )">Left</button><br>
+<button type="button" onclick="loadXMLDoc( 'R' )">Right</button><br>
+<button type="button" onclick="loadXMLDoc( 'S' )">Stop</button><br>
+
+</body>
+</html>
